<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.CadTarefaFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/titulo_tarefa"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/titulo"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:padding="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/edit_tarefa"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/border"
            android:layout_margin="2dp"
            android:inputType="textCapSentences"
            android:padding="2dp"
            />
    </LinearLayout>
    <View
        android:layout_width="wrap_content"
        android:layout_height="5dp"
        android:background="@color/black"
        android:layout_margin="5dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/descricao_tarefa"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/descricao"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:padding="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/edit_descricao"
            android:gravity="top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences|textMultiLine"
            android:lines="8"
            android:background="@drawable/border"
            android:layout_margin="2dp"
            android:padding="2dp"
            />
    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="5dp"
        android:background="@color/black"
        android:layout_margin="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/data_prevista"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/data_prevista"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:padding="5dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/bt_data"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/selec_data"
            android:layout_margin="5dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/bt_salvar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/salvar"
            android:layout_margin="5dp"/>
    </LinearLayout>

</LinearLayout>